--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.1.0",
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
+    "leaflet": "^1.9.4",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,6 +31,7 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.13",
     "jasmine-core": "~4.6.0",
     "jest": "^29.7.0",
     "karma": "~6.4.0",
