--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,12 @@ services:
     build:
       context: "./backend"
       dockerfile: "Dockerfile"
+      args:
+        - NODE_ENV: production
     networks:
       - events_net
     ports:
       - "8080:8080"
-    environment:
-      - NODE_ENV=production
 
   
   db:
