--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,7 +16,7 @@ jobs:
           - 27017:27017
     
     env:
-      NODE_ENV: production
+      NODE_ENV: prod
     
     steps:
       - name: Checkout repository
@@ -35,7 +35,7 @@ jobs:
         run: docker build -t hassanlasheen/frontend:latest -f frontend/Dockerfile ./frontend
 
       - name: Build backend image
-        run: docker build -t hassanlasheen/backend:latest --build-arg NODE_ENV=production -f backend/Dockerfile ./backend
+        run: docker build -t hassanlasheen/backend:latest --build-arg NODE_ENV=prod -f backend/Dockerfile ./backend
       
       - name: Push frontend image
         run: docker push hassanlasheen/frontend:latest
@@ -46,7 +46,7 @@ jobs:
       # deploy application using docker compose
       - name: Deploy with Docker Compose
         env:
-          NODE_ENV: production
+          NODE_ENV: prod
         run: |
           docker-compose -f docker-compose.yml up -d --pull always
 
@@ -71,7 +71,7 @@ jobs:
 
       - name: Deploy with Docker Compose
         env:
-          NODE_ENV: production
+          NODE_ENV: prod
         run: |
           docker-compose down 
           docker-compose up -d --pull always
