--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Backend
 /backend/node_modules
-/backend/src/.env.dev
-/backend/src/.env.prod
+/backend/src/.env.development
+/backend/src/.env.production
 /backend/dist/
 
 # Frontend
