--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,6 +34,8 @@ jobs:
       - name: Build frontend image
         run: docker build -t hassanlasheen/frontend:latest -f frontend/Dockerfile ./frontend
 
+      - name: List files in src directory
+        run: ls -la ./backend/src
 
       - name: Build backend image
         run: docker build -t hassanlasheen/backend:latest --build-arg NODE_ENV=production -f backend/Dockerfile ./backend
