--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       context: "./backend"
       dockerfile: "Dockerfile"
       args:
-        NODE_ENV: ${NODE_ENV}
+        NODE_ENV: production
     networks:
       - events_net
     ports:
