--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -84,13 +84,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      # Deploy with Docker Compose without bringing down existing containers
       - name: Deploy with Docker Compose
         env:
           NODE_ENV: production
         run: |
-          docker-compose down 
-          docker-compose up -d --pull always
+          docker-compose -f docker-compose.yml up -d --pull always
 
       - name: Clean up old images
         run: |
-          docker image prune -f 
+          docker image prune -f
